auto-select input fields, highlight advanced cards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,6 +42,7 @@
   "roundBot": {
     "title": "Bot | Bot #{bot}",
     "automaCard": "Automa Card",
+    "automaCardAdvanced": "Advanced Automa Card",
     "culturalPolicies": "Cultural Policies",
     "goldCost": "Gold cost: {number}.",
     "nexus": "Nexus",
