--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,8 @@
     "title": "Monumental Solo Helper",
     "play1": "Play the <b>Automa Module</b> of <a href='https://boardgamegeek.com/boardgame/248125/monumental' target='_blank'><b>Monumental</b></a>.",
     "play2": "To play the Automa module you only need the base game, this helper application replaces the solo cards. You can play against up to 4 bots.",
-    "play3": "The expansion <b>Lost Kingdoms</b> is also supported."
+    "play3": "The expansion <b>Lost Kingdoms</b> is also supported.",
+    "feedback": "Discussion and Feedback:"
   },
   "setup": {
     "title": "Setup Game",
