--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
   "gameTitle": "Monumental",
   "home": {
     "title": "Monumental Solo Helper",
-    "play1": "Play the <b>Automa Module</b> of <a href='https://boardgamegeek.com/boardgame/248125/monumental' target='_blank'><b>Monumental</b></a>.",
+    "play1": "Play the <b>Automa Module</b> of <a href='https://boardgamegeek.com/boardgame/248125/monumental' target='_blank' rel='noopener'><b>Monumental</b></a>.",
     "play2": "To play the Automa module you only need the base game, this helper application replaces the solo cards. You can play against up to 4 bots.",
     "play3": "The expansion <b>Lost Kingdoms</b> is also supported.",
     "feedback": "Discussion and Feedback:"
